--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="col-md-12">
             <h3 class="section-title">About</h3>
             <div class="section-title-divider"></div>
-            <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+            <p class="section-description">Your One Stop Shop for Accelerating Your Small Business</p>
           </div>
         </div>
       </div>
@@ -162,32 +162,32 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 service-item">
             <div class="service-icon"><i class="fa fa-desktop"></i></div>
-            <h4 class="service-title"><a href="">Lorem Ipsum</a></h4>
+            <h4 class="service-title"><a href="">Social Media Creation</a></h4>
             <p class="service-description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
           </div>
           <div class="col-lg-4 col-md-6 service-item">
             <div class="service-icon"><i class="fa fa-bar-chart"></i></div>
-            <h4 class="service-title"><a href="">Dolor Sitema</a></h4>
+            <h4 class="service-title"><a href="">Social Media Management</a></h4>
             <p class="service-description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
           </div>
           <div class="col-lg-4 col-md-6 service-item">
             <div class="service-icon"><i class="fa fa-paper-plane"></i></div>
-            <h4 class="service-title"><a href="">Sed ut perspiciatis</a></h4>
+            <h4 class="service-title"><a href="">Marketing Communications/Materials</a></h4>
             <p class="service-description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
           </div>
           <div class="col-lg-4 col-md-6 service-item">
             <div class="service-icon"><i class="fa fa-photo"></i></div>
-            <h4 class="service-title"><a href="">Magni Dolores</a></h4>
+            <h4 class="service-title"><a href="">Customer Relationship Management</a></h4>
             <p class="service-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
           </div>
           <div class="col-lg-4 col-md-6 service-item">
             <div class="service-icon"><i class="fa fa-road"></i></div>
-            <h4 class="service-title"><a href="">Nemo Enim</a></h4>
+            <h4 class="service-title"><a href="">Customer Experience Training</a></h4>
             <p class="service-description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
           </div>
           <div class="col-lg-4 col-md-6 service-item">
-            <div class="service-icon"><i class="fa fa-shopping-bag"></i></div>
-            <h4 class="service-title"><a href="">Eiusmod Tempor</a></h4>
+            <div class="service-icon"><i class="fa fa-paperclip"></i></div>
+            <h4 class="service-title"><a href="">Administration</a></h4>
             <p class="service-description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
