--- a/index.html
+++ b/index.html
@@ -478,9 +478,8 @@
 
           <div class="col-lg-5 col-md-8">
             <div class="form">
-              <form name="contact" netlify>
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form" data-netlify="true">
-                <div class="form-group">
+<form name="contact" method="POST" data-netlify="true">
+                  <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validate"></div>
                 </div>
