--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
 
           <div class="col-md-6 about-content">
-            <h2 class="about-title">We provide great services and ideas</h2>
+            <h2 class="about-title">Providing services to small businesses across the US</h2>
             <p class="about-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
               in reprehenderit in voluptate
